@@ -413,7 +413,9 @@ static const struct {
     BOOL( "xftGlobalAdvance", "xftga", Opt2_xftGlobalAdvance,
 	    "global advance of freetype font" ),
     STRG(Rs_xftwt, "xftWeight", "xftwt", "style",
-	"weight style = light|medium|bold", 0),
+	"Xft font weight", 0),
+    STRG(Rs_xftBwt, "xftBoldWeight", "xftbwt", "style",
+	"Xft bold font weight", 0),
     STRG(Rs_xftst, "xftSlant", "xftst", "style",
 	"slant style = roman|italic|oblique", 0),
     STRG(Rs_xftsz, "xftSize", "xftsz", "number",
